crates/math-core/tests/snapshots/error_test__sqrt_unknown_cmd.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\sqrt[3]\\asdf 3"
---
Error: Unknown command "\asdf".
   ╭─[ <input>:1:9 ]
   │
 1 │ \sqrt[3]\asdf 3
   │         ──┬──  
   │           ╰──── unknown command
───╯
